force-app/main/default/objects/OCE__Address__c/OCE__Address__c.object-meta.xml
<CustomObject>
    <description>The Address object stores address information for all Accounts in the system.</description>
    <label>Address</label>
    <nameField>
        <label>Address Line 1</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>