force-app/main/default/objects/OCE__Address__c/fields/Lilly_AddressLine5__c.field-meta.xml
<CustomField>
    <fullName>Lilly_AddressLine5__c</fullName>
    <label>AddressLine5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>