force-app/main/default/objects/OCE__Address__c/fields/Lilly_AttentionName__c.field-meta.xml
<CustomField>
    <fullName>Lilly_AttentionName__c</fullName>
    <label>AttentionName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>