force-app/main/default/objects/OCE__Address__c/fields/Lilly_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_CreatedDate__c</fullName>
    <label>CreatedDate</label>
    <type>Date</type>
</CustomField>