force-app/main/default/objects/OCE__Address__c/fields/Lilly_Crosswalk__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Crosswalk__c</fullName>
    <label>Crosswalk</label>
    <length>20</length>
    <type>Text</type>
</CustomField>