force-app/main/default/objects/OCE__Address__c/fields/Lilly_CrosswalkId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_CrosswalkId__c</fullName>
    <label>CrosswalkId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>