force-app/main/default/objects/OCE__Address__c/fields/Lilly_DataValidationStatusCode__c.field-meta.xml
<CustomField>
    <fullName>Lilly_DataValidationStatusCode__c</fullName>
    <label>DataValidationStatusCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>