force-app/main/default/objects/OCE__Address__c/fields/Lilly_EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_EffectiveEndDate__c</fullName>
    <label>EffectiveEndDate</label>
    <type>Date</type>
</CustomField>