force-app/main/default/objects/OCE__Address__c/fields/Lilly_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_EffectiveStartDate__c</fullName>
    <label>EffectiveStartDate</label>
    <type>Date</type>
</CustomField>