force-app/main/default/objects/OCE__Address__c/fields/Lilly_HCO_DepartmentIndicator__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCO_DepartmentIndicator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HCO DepartmentIndicator</label>
    <type>Checkbox</type>
</CustomField>