force-app/main/default/objects/OCE__Address__c/fields/Lilly_HCP_Address_EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Address_EffectiveStartDate__c</fullName>
    <label>HCP Address EffectiveStartDate</label>
    <type>Date</type>
</CustomField>