force-app/main/default/objects/OCE__Address__c/fields/Lilly_HCP_Address_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Address_Latitude__c</fullName>
    <label>HCP Address Latitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>