force-app/main/default/objects/OCE__Address__c/fields/Lilly_HCP_Address_SourceBlockStatus__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Address_SourceBlockStatus__c</fullName>
    <label>HCP Address SourceBlockStatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>