force-app/main/default/objects/OCE__Address__c/fields/Lilly_HCP_Address_SubadministrativeArea__c.field-meta.xml
<CustomField>
    <fullName>Lilly_HCP_Address_SubadministrativeArea__c</fullName>
    <label>HCP Address SubadministrativeArea</label>
    <length>20</length>
    <type>Text</type>
</CustomField>