force-app/main/default/objects/OCE__Address__c/fields/Lilly_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Latitude__c</fullName>
    <label>Latitude</label>
    <length>100</length>
    <type>Text</type>
</CustomField>