force-app/main/default/objects/OCE__Address__c/fields/Lilly_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Longitude__c</fullName>
    <label>Longitude</label>
    <length>20</length>
    <type>Text</type>
</CustomField>