force-app/main/default/objects/OCE__Address__c/fields/Lilly_Pobox__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Pobox__c</fullName>
    <label>Pobox</label>
    <length>10</length>
    <type>Text</type>
</CustomField>