force-app/main/default/objects/OCE__Address__c/fields/Lilly_Rank__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Rank__c</fullName>
    <label>Rank</label>
    <length>10</length>
    <type>Text</type>
</CustomField>