force-app/main/default/objects/OCE__Address__c/fields/Lilly_SapNumber__c.field-meta.xml
<CustomField>
    <fullName>Lilly_SapNumber__c</fullName>
    <label>SapNumber</label>
    <length>100</length>
    <type>Text</type>
</CustomField>