force-app/main/default/objects/OCE__Address__c/fields/Lilly_SourceAddressId__c.field-meta.xml
<CustomField>
    <fullName>Lilly_SourceAddressId__c</fullName>
    <label>SourceAddressId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>