force-app/main/default/objects/OCE__Address__c/fields/Lilly_UpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>Lilly_UpdatedDate__c</fullName>
    <label>UpdatedDate</label>
    <type>Date</type>
</CustomField>