force-app/main/default/objects/OCE__Address__c/fields/OCE__Account__c.field-meta.xml
<CustomField>
    <fullName>OCE__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates why an address record was created (for which workplace account)</description>
    <inlineHelpText>Indicates why an address record was created (for which workplace account)</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>