force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine1X__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine1X__c</fullName>
    <description>Translation of Address Line 1(Name).</description>
    <inlineHelpText>Translation of Address Line 1(Name).</inlineHelpText>
    <label>Address Line 1 X</label>
    <length>80</length>
    <type>Text</type>
</CustomField>