force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine2__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine2__c</fullName>
    <description>The second line of the street address for the Account or User. This is used to store all second line street addresses in the system.</description>
    <inlineHelpText>The second line of the street address for the Account or User. This is used to store all second line street addresses in the system.</inlineHelpText>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>