force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine2X__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine2X__c</fullName>
    <description>Translation of Address Line 2.</description>
    <inlineHelpText>Translation of Address Line 2.</inlineHelpText>
    <label>Address Line 2 X</label>
    <length>100</length>
    <type>Text</type>
</CustomField>