force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine3__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine3__c</fullName>
    <description>The third line of the street address for the Account or User. This is used to store all third line street addresses in the system.</description>
    <inlineHelpText>The third line of the street address for the Account or User. This is used to store all third line street addresses in the system.</inlineHelpText>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>