force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine3X__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine3X__c</fullName>
    <complianceGroup>PII;GDPR</complianceGroup>
    <description>Translation of Address Line 3.</description>
    <inlineHelpText>Translation of Address Line 3.</inlineHelpText>
    <label>Address Line 3 X</label>
    <length>100</length>
    <type>Text</type>
</CustomField>