force-app/main/default/objects/OCE__Address__c/fields/OCE__AddressLine4__c.field-meta.xml
<CustomField>
    <fullName>OCE__AddressLine4__c</fullName>
    <description>The fourth line of the street address for the Account or User. This is used to store all fourth line street addresses in the system.</description>
    <inlineHelpText>The fourth line of the street address for the Account or User. This is used to store all fourth line street addresses in the system.</inlineHelpText>
    <label>Address Line 4</label>
    <length>100</length>
    <type>Text</type>
</CustomField>