force-app/main/default/objects/OCE__Address__c/fields/OCE__Brick__c.field-meta.xml
<CustomField>
    <fullName>OCE__Brick__c</fullName>
    <description>The Brick name. A Brick is a collection of Accounts and Contacts, normally in a common geographic area. This is used to store all Bricks of an address in the system.</description>
    <inlineHelpText>The Brick name. A Brick is a collection of Accounts and Contacts, normally in a common geographic area. This is used to store all Bricks of an address in the system.</inlineHelpText>
    <label>Brick</label>
    <length>50</length>
    <type>Text</type>
</CustomField>