force-app/main/default/objects/OCE__Address__c/fields/OCE__Building__c.field-meta.xml
<CustomField>
    <fullName>OCE__Building__c</fullName>
    <description>Building Name</description>
    <inlineHelpText>Building Name</inlineHelpText>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>