force-app/main/default/objects/OCE__Address__c/fields/OCE__CityX__c.field-meta.xml
<CustomField>
    <fullName>OCE__CityX__c</fullName>
    <description>Translation of city.</description>
    <inlineHelpText>Translation of city.</inlineHelpText>
    <label>City X</label>
    <length>100</length>
    <type>Text</type>
</CustomField>