force-app/main/default/objects/OCE__Address__c/fields/OCE__Country__c.field-meta.xml
<CustomField>
    <fullName>OCE__Country__c</fullName>
    <description>Country of the address. This is used to store all countries of an address in the system.</description>
    <inlineHelpText>Country of the address. This is used to store all countries of an address in the system.</inlineHelpText>
    <label>DEPRECATED_Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>