force-app/main/default/objects/OCE__Address__c/fields/OCE__DEAExpirationDateIms__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEAExpirationDateIms__c</fullName>
    <description>DEA License expiration date.</description>
    <label>DEAExpirationDateIms</label>
    <type>DateTime</type>
</CustomField>