force-app/main/default/objects/OCE__Address__c/fields/OCE__DEALicense__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicense__c</fullName>
    <description>Number of DEA License.</description>
    <label>DEA License #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>