force-app/main/default/objects/OCE__Address__c/fields/OCE__DEALicenseValidation__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicenseValidation__c</fullName>
    <description>Verifies or DEA License is still valid.</description>
    <formula>AND(
   OCE__DEALicense__c != null,
   DATEVALUE(OCE__DEAExpirationDateIms__c) &gt;= TODAY()      
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEA License Validation</label>
    <type>Checkbox</type>
</CustomField>