force-app/main/default/objects/OCE__Address__c/fields/OCE__DEALicenseValidationIcon__c.field-meta.xml
<CustomField>
    <fullName>OCE__DEALicenseValidationIcon__c</fullName>
    <description>Gets Icon for Account Address based on valid or not valid license.</description>
    <formula>IF(
   OCE__DEALicenseValidation__c,
   IMAGE(&quot;/resource/OCE__ApolloIcons/png/dea-green.png&quot;, &quot;&quot;, 14, 26),
   IMAGE(&quot;/resource/OCE__ApolloIcons/png/dea-red.png&quot;, &quot;&quot;, 14, 26)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DEA License Validation Icon</label>
    <type>Text</type>
</CustomField>