force-app/main/default/objects/OCE__Address__c/fields/OCE__DisplayAddress__c.field-meta.xml
<CustomField>
    <fullName>OCE__DisplayAddress__c</fullName>
    <description>Full Address in Single line</description>
    <formula>SUBSTITUTE(
IF( NOT(ISBLANK(Name)), Name, &apos;&apos;)&amp;
IF( NOT(ISBLANK(OCE__AddressLine2__c)), &apos;, &apos;&amp; OCE__AddressLine2__c, &apos;&apos;)&amp;
IF( NOT(ISBLANK(OCE__AddressLine3__c)), &apos;, &apos;&amp; OCE__AddressLine3__c, &apos;&apos;)&amp;
IF( NOT(ISBLANK(OCE__AddressLine4__c)), &apos;, &apos;&amp; OCE__AddressLine4__c, &apos;&apos;)&amp;
IF(OCE__City__c !=&apos;&apos;,&apos;, &apos;&amp; OCE__City__c,&apos;&apos;)&amp;
IF( TEXT( OCE__StateCode__c ) !=&apos;&apos;,&apos;, &apos;&amp; TEXT( OCE__StateCode__c ),&apos;&apos;)&amp;
IF( TEXT( OCE__CountryCode__c ) !=&apos;&apos;,&apos;, &apos;&amp; TEXT( OCE__CountryCode__c ),&apos;&apos;)&amp;
IF(OCE__ZipCode__c !=&apos;&apos;,&apos;, &apos;&amp; OCE__ZipCode__c,&apos;&apos;)
,&apos;&apos;
,&apos;&apos;)</formula>
    <inlineHelpText>Display Address</inlineHelpText>
    <label>Display Address</label>
    <type>Text</type>
</CustomField>