force-app/main/default/objects/OCE__Address__c/fields/OCE__District__c.field-meta.xml
<CustomField>
    <fullName>OCE__District__c</fullName>
    <description>District of the address. This is used to store all districts of an address in the system.</description>
    <inlineHelpText>District of the address. This is used to store all districts of an address in the system.</inlineHelpText>
    <label>District</label>
    <length>100</length>
    <type>Text</type>
</CustomField>