force-app/main/default/objects/OCE__Address__c/fields/OCE__DuplicateOf__c.field-meta.xml
<CustomField>
    <fullName>OCE__DuplicateOf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To store the duplicate address lookup</description>
    <label>Duplicate Of</label>
    <referenceTo>OCE__Address__c</referenceTo>
    <relationshipLabel>Addresses</relationshipLabel>
    <relationshipName>DuplicateAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>