force-app/main/default/objects/OCE__Address__c/fields/OCE__Geo2__c.field-meta.xml
<CustomField>
    <fullName>OCE__Geo2__c</fullName>
    <description>Geography type code GEO2</description>
    <label>Geo2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>