force-app/main/default/objects/OCE__Address__c/fields/OCE__Geo3__c.field-meta.xml
<CustomField>
    <fullName>OCE__Geo3__c</fullName>
    <description>Geography type code GEO3</description>
    <label>Geo3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>