force-app/main/default/objects/OCE__Address__c/fields/OCE__GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>OCE__GeoLocation__c</fullName>
    <description>Latitude of the address. This is used to store all geolocations of an address in the system for Mapping purposes.</description>
    <inlineHelpText>Latitude of the address. This is used to store all geolocations of an address in the system for Mapping purposes.</inlineHelpText>
    <label>GeoLocation</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>