force-app/main/default/objects/OCE__Address__c/fields/OCE__Inactive__c.field-meta.xml
<CustomField>
    <fullName>OCE__Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the address is active or not. If an address is inactive, it will not be displayed anywhere else in the system.</description>
    <inlineHelpText>Indicates if the address is active or not. If an address is inactive, it will not be displayed anywhere else in the system.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>