force-app/main/default/objects/OCE__Address__c/fields/OCE__IsTDDDLicenseStatusActive__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsTDDDLicenseStatusActive__c</fullName>
    <description>Identifies if SDL Status is active.</description>
    <formula>CONTAINS(TEXT(OCE__TDDDLicenseStatus__c), &quot;Active&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL Status Active</label>
    <type>Checkbox</type>
</CustomField>