force-app/main/default/objects/OCE__Address__c/fields/OCE__IsValidated__c.field-meta.xml
<CustomField>
    <fullName>OCE__IsValidated__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if the address is validated or not.</description>
    <inlineHelpText>Indicates if the address is validated or not.</inlineHelpText>
    <label>Validated</label>
    <type>Checkbox</type>
</CustomField>