force-app/main/default/objects/OCE__Address__c/fields/OCE__OriginOrgName__c.field-meta.xml
<CustomField>
    <fullName>OCE__OriginOrgName__c</fullName>
    <description>Name of the org from which an account originates.</description>
    <inlineHelpText>Name of the org from which an account originates.</inlineHelpText>
    <label>Origin Org Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>