force-app/main/default/objects/OCE__Address__c/fields/OCE__State__c.field-meta.xml
<CustomField>
    <fullName>OCE__State__c</fullName>
    <description>State of the address. This is used to store all states of an address in the system.</description>
    <inlineHelpText>State of the address. This is used to store all states of an address in the system.</inlineHelpText>
    <label>DEPRECATED_State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>