force-app/main/default/objects/OCE__Address__c/fields/OCE__StateCode__c.field-meta.xml
<CustomField>
    <fullName>OCE__StateCode__c</fullName>
    <description>State code picklist field. Dependent picklist.</description>
    <inlineHelpText>State of the address. This is used to store all states of an address in the system.</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OCE__CountryCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OCE__States</valueSetName>
    </valueSet>
</CustomField>