force-app/main/default/objects/OCE__Address__c/fields/OCE__Suite__c.field-meta.xml
<CustomField>
    <fullName>OCE__Suite__c</fullName>
    <description>Stores Suite</description>
    <inlineHelpText>Stores Suite</inlineHelpText>
    <label>Suite #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>