force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDExpirationDate__c</fullName>
    <description>Expiration date for SDL.</description>
    <label>SDL Expiration Date</label>
    <type>DateTime</type>
</CustomField>