force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDIsNeededForState2__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDIsNeededForState2__c</fullName>
    <description>Shows if SDL is needed for State selected in StateCode__c</description>
    <formula>CONTAINS($Setup.OCE__StateLicenseNumberSettings__c.OCE__TDDDStates__c, (&apos;;&apos; + IF(ISBLANK(TEXT(OCE__StateCode2__c)),TEXT(OCE__StateCode__c),TEXT(OCE__StateCode2__c)) + &apos;;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL Is Needed For State 2</label>
    <type>Checkbox</type>
</CustomField>