force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDIsNeededForState__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDIsNeededForState__c</fullName>
    <description>Shows if SDL is needed for State selected in StateCode__c</description>
    <formula>CONTAINS($Setup.OCE__StateLicenseNumberSettings__c.OCE__TDDDStates__c, (&apos;;&apos; + TEXT(OCE__StateCode__c) + &apos;;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL Is Needed For State</label>
    <type>Checkbox</type>
</CustomField>