force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDLicense__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicense__c</fullName>
    <description>Stores SDL number for current AccountAddress - Terminal Distributor of Dangerous Drugs (SDL) license allows a business entity to purchase and possess dangerous drugs at a specific address for distribution to patients.</description>
    <label>SDL #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>