force-app/main/default/objects/OCE__Address__c/fields/OCE__TDDDLicenseStatus__c.field-meta.xml
<CustomField>
    <fullName>OCE__TDDDLicenseStatus__c</fullName>
    <description>Identifies Status of SDL.</description>
    <label>SDL Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active on Probation</fullName>
            </value>
            <value>
                <fullName>Active – Paid in Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>